# sparql-playground

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
src/: loader.py  queries.py
tests/: test_queries.py
